--- a/src/webapp/resources/css/bootstrap.css
+++ b/src/webapp/resources/css/bootstrap.css
@@ -1190,7 +1190,7 @@ input[type="file"] {
   /* In IE7, the height of the select element cannot be changed by height, only font-size */
 
   *margin-top: 4px;
-  /* For IE7, add top margin to align select with labels */
+  /* For IE7, create top margin to align select with labels */
 
   line-height: 30px;
 }
